new styles and elements

--- a/index.html
+++ b/index.html
@@ -8,15 +8,42 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@800&family=Lexend+Deca:wght@200&display=swap"
+    rel="stylesheet">
   <title>Practice</title>
 </head>
 
 <body>
   <div class="container">
     <div class="row">
-      <div class="row__col"></div>
-      <div class="row__col"></div>
-      <div class="row__col"></div>
+      <div class="row__col1">
+        <img src="images/icon-sedans.svg" alt="">
+        <h1 class="col__title">Sedans</h1>
+        <p>
+          <strong>Choose a for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</strong>
+        </p>
+      </div>
+      <div class="row__col2">
+        <img src="images/icon-suvs.svg" alt="">
+        <h1 class="col__title">Suvs</h1>
+        <p>
+          <strong>
+            Take an <strong>SUV</strong> for its spacious interior, power, and versatility. Perfect for your next family vacation
+            and off-road adventures.
+          </strong>
+        </p>
+      </div>
+      <div class="row__col3">
+        <img src="images/icon-luxury.svg" alt="">
+        <h1 class="col__title">Luxury</h1>
+        <p>
+          <strong>
+            Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a <strong>LUXURY</strong> rental
+            and arrive in style.
+          </strong>
+        </p>
+      </div>
     </div>
   </div>
 </body>
