--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         <p>
           <strong>Choose a for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</strong>
         </p>
+        <div class="btn">
+          <a href="#" class="button">Learn more</a>
+        </div>
       </div>
       <div class="row__col2">
         <img src="images/icon-suvs.svg" alt="">
@@ -33,6 +36,9 @@
             and off-road adventures.
           </strong>
         </p>
+        <div class="btn">
+          <a href="#" class="button">Learn more</a>
+        </div>
       </div>
       <div class="row__col3">
         <img src="images/icon-luxury.svg" alt="">
@@ -43,6 +49,9 @@
             and arrive in style.
           </strong>
         </p>
+        <div class="btn">
+          <a href="#" class="button">Learn more</a>
+        </div>
       </div>
     </div>
   </div>
