--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@800&family=Lexend+Deca:wght@200&display=swap"
     rel="stylesheet">
+    
   <title>Practice</title>
 </head>
 
@@ -24,7 +25,7 @@
           <strong>Choose a for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</strong>
         </p>
         <div class="btn">
-          <a href="#" class="button">Learn more</a>
+          <a href="#" class="button" id="yellow">Learn more</a>
         </div>
       </div>
       <div class="row__col2">
@@ -37,7 +38,7 @@
           </strong>
         </p>
         <div class="btn">
-          <a href="#" class="button">Learn more</a>
+          <a href="#" class="button" id="blue">Learn more</a>
         </div>
       </div>
       <div class="row__col3">
@@ -50,7 +51,7 @@
           </strong>
         </p>
         <div class="btn">
-          <a href="#" class="button">Learn more</a>
+          <a href="#" class="button" id="green">Learn more</a>
         </div>
       </div>
     </div>
